--- a/res/layout/activity_statistic.xml
+++ b/res/layout/activity_statistic.xml
@@ -202,6 +202,22 @@
                 android:gravity="center"
                 android:text="" />
         </TableRow>
+
+        <TableRow
+            android:id="@+id/tableRow6"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingTop="@dimen/view_padding" >
+
+            <TextView
+                android:id="@+id/statisticRemark"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="center_vertical"
+                android:layout_weight="1"
+                android:gravity="center_vertical|left"
+                android:text="" />
+        </TableRow>
     </TableLayout>
 
 </ScrollView>
