--- a/res/layout/dialog_export.xml
+++ b/res/layout/dialog_export.xml
@@ -9,6 +9,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:text="@string/defaultFileName" />
+        android:text="" />
 
 </LinearLayout>
