--- a/res/values-v11/themes.xml
+++ b/res/values-v11/themes.xml
@@ -14,6 +14,7 @@
         <item name="spinnerItemTextColor">@android:color/white</item>
         <item name="textViewTextColor">@android:color/white</item>
         <item name="editableTextViewTextColor">@android:color/white</item>
+        <item name="android:windowActionBar">true</item>
     </style>
 
     <style name="AppBaseThemeLight" parent="android:Theme.Holo.Light">
@@ -29,6 +30,7 @@
         <item name="spinnerItemTextColor">@android:color/black</item>
         <item name="textViewTextColor">@android:color/black</item>
         <item name="editableTextViewTextColor">@android:color/black</item>
+        <item name="android:windowActionBar">true</item>
     </style>
 
     <style name="DialogBaseTheme" parent="android:Theme.Holo.Dialog">
