--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -6,16 +6,6 @@
         android:icon="?attr/statisticIcon"
         android:showAsAction="ifRoom|withText"
         android:title="@string/statistic"/>
-    <item
-        android:id="@+id/settings"
-        android:icon="?attr/settingsIcon"
-        android:showAsAction="never"
-        android:title="@string/settings"/>
-    <item
-        android:id="@+id/rate"
-        android:icon="?attr/rateIcon"
-        android:showAsAction="never"
-        android:title="@string/rate"/>
 
     <group android:checkableBehavior="single" >
         <item
@@ -31,6 +21,11 @@
     </group>
 
     <item
+        android:id="@+id/settings"
+        android:icon="?attr/settingsIcon"
+        android:showAsAction="never"
+        android:title="@string/settings"/>
+    <item
         android:id="@+id/backupData"
         android:icon="?attr/exportIcon"
         android:showAsAction="never"
@@ -45,6 +40,12 @@
         android:icon="?attr/clearAllDataIcon"
         android:showAsAction="never"
         android:title="@string/clearAllData"/>
+    <item
+        android:id="@+id/rate"
+        android:icon="?attr/rateIcon"
+        android:showAsAction="never"
+        android:title="@string/rate"
+        android:visible="false"/>
     <item
         android:id="@+id/help"
         android:icon="?attr/helpIcon"
