--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
 
-    <PreferenceCategory
-        android:key="pref_calculation_settings"
-        android:title="@string/pref_calculation_settings_title" >
+    <PreferenceCategory android:title="@string/pref_calculation_settings_title" >
         <Preference
             android:defaultValue="28"
             android:key="pref_default_menstrual_cycle_len"
@@ -16,5 +14,11 @@
             android:summary="@string/pref_use_average_summary"
             android:title="@string/pref_use_average_title" />
     </PreferenceCategory>
+
+    <Preference android:title="@string/rate" >
+        <intent
+            android:action="android.intent.action.VIEW"
+            android:data="market://details?id=com.anna.sent.soft.childbirthdate" />
+    </Preference>
 
 </PreferenceScreen>
