--- a/res/values/themes.xml
+++ b/res/values/themes.xml
@@ -95,7 +95,7 @@
         <item name="nextItemIcon">@drawable/ic_next_item_dark</item>
         <item name="prevItemIcon">@drawable/ic_previous_item_dark</item>
         <item name="goToTodayIcon">@drawable/ic_go_to_today_dark</item>
-        <item name="listIcon">@drawable/ic_list_dark</item>
+        <item name="listIcon">@drawable/ic_list_light</item>
     </style>
 
     <style name="DialogBaseThemeLight" parent="android:Theme.Dialog">
@@ -107,7 +107,7 @@
         <item name="nextItemIcon">@drawable/ic_next_item_dark</item>
         <item name="prevItemIcon">@drawable/ic_previous_item_dark</item>
         <item name="goToTodayIcon">@drawable/ic_go_to_today_dark</item>
-        <item name="listIcon">@drawable/ic_list_dark</item>
+        <item name="listIcon">@drawable/ic_list_light</item>
     </style>
 
     <style name="DialogTheme" parent="DialogBaseTheme">
