--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -21,4 +21,12 @@
             android:data="market://details?id=com.anna.sent.soft.childbirthdate" />
     </Preference>
 
+    <ListPreference
+        android:defaultValue="@integer/defaultTheme"
+        android:dialogTitle="@string/pref_theme_title"
+        android:entries="@array/theme"
+        android:entryValues="@array/theme_values"
+        android:key="pref_theme"
+        android:title="@string/pref_theme_title" />
+
 </PreferenceScreen>
