--- a/res/values-v14/themes.xml
+++ b/res/values-v14/themes.xml
@@ -2,8 +2,7 @@
 <resources xmlns:android="http://schemas.android.com/apk/res/android">
 
     <style name="AppBaseThemeLight" parent="android:Theme.Holo.Light.DarkActionBar">
-
-        <!-- item name="numberPickerStyle">@style/Widget.Holo.Light.NumberPicker</item -->
+        <item name="numberPickerStyle">@style/Widget.Holo.Light.NumberPicker</item>
         <item name="helpIcon">@drawable/ic_menu_help_dark</item>
         <item name="settingsIcon">@drawable/ic_settings_dark</item>
         <item name="rateIcon">@drawable/ic_menu_rate_dark</item>
