--- a/res/layout/view_day.xml
+++ b/res/layout/view_day.xml
@@ -144,6 +144,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
                 android:drawableLeft="?attr/listIcon"
                 android:text="" />
         </RelativeLayout>
