--- a/res/values-v11/themes.xml
+++ b/res/values-v11/themes.xml
@@ -2,8 +2,7 @@
 <resources xmlns:android="http://schemas.android.com/apk/res/android">
 
     <style name="AppBaseTheme" parent="android:Theme.Holo">
-
-        <!-- item name="numberPickerStyle">@style/Widget.Holo.NumberPicker</item -->
+        <item name="numberPickerStyle">@style/Widget.Holo.NumberPicker</item>
         <item name="helpIcon">@drawable/ic_menu_help_dark</item>
         <item name="settingsIcon">@drawable/ic_settings_dark</item>
         <item name="rateIcon">@drawable/ic_menu_rate_dark</item>
@@ -18,8 +17,7 @@
     </style>
 
     <style name="AppBaseThemeLight" parent="android:Theme.Holo.Light">
-
-        <!-- item name="numberPickerStyle">@style/Widget.Holo.Light.NumberPicker</item -->
+        <item name="numberPickerStyle">@style/Widget.Holo.Light.NumberPicker</item>
         <item name="helpIcon">@drawable/ic_menu_help_light</item>
         <item name="settingsIcon">@drawable/ic_settings_light</item>
         <item name="rateIcon">@drawable/ic_menu_rate_light</item>
@@ -34,8 +32,7 @@
     </style>
 
     <style name="DialogBaseTheme" parent="android:Theme.Holo.Dialog">
-
-        <!-- item name="numberPickerStyle">@style/Widget.Holo.NumberPicker</item -->
+        <item name="numberPickerStyle">@style/Widget.Holo.NumberPicker</item>
         <item name="spinnerItemTextColor">@android:color/white</item>
         <item name="textViewTextColor">@android:color/white</item>
         <item name="editableTextViewTextColor">@android:color/white</item>
@@ -46,8 +43,7 @@
     </style>
 
     <style name="DialogBaseThemeLight" parent="android:Theme.Holo.Light.Dialog">
-
-        <!-- item name="numberPickerStyle">@style/Widget.Holo.Light.NumberPicker</item -->
+        <item name="numberPickerStyle">@style/Widget.Holo.Light.NumberPicker</item>
         <item name="spinnerItemTextColor">@android:color/black</item>
         <item name="textViewTextColor">@android:color/black</item>
         <item name="editableTextViewTextColor">@android:color/black</item>
