--- a/res/values/themes.xml
+++ b/res/values/themes.xml
@@ -27,8 +27,7 @@
     </declare-styleable>
 
     <style name="AppBaseTheme" parent="android:Theme">
-
-        <!-- item name="numberPickerStyle">@style/Widget.NumberPicker</item -->
+        <item name="numberPickerStyle">@style/Widget.NumberPicker</item>
         <item name="helpIcon">@drawable/ic_menu_help_light</item>
         <item name="settingsIcon">@drawable/ic_settings_light</item>
         <item name="rateIcon">@drawable/ic_menu_rate_light</item>
@@ -42,8 +41,7 @@
     </style>
 
     <style name="AppBaseThemeLight" parent="android:Theme.Light">
-
-        <!-- item name="numberPickerStyle">@style/Widget.NumberPicker</item -->
+        <item name="numberPickerStyle">@style/Widget.NumberPicker</item>
         <item name="helpIcon">@drawable/ic_menu_help_light</item>
         <item name="settingsIcon">@drawable/ic_settings_light</item>
         <item name="rateIcon">@drawable/ic_menu_rate_light</item>
@@ -87,8 +85,7 @@
     </style>
 
     <style name="DialogBaseTheme" parent="android:Theme.Dialog">
-
-        <!-- item name="numberPickerStyle">@style/Widget.NumberPicker</item -->
+        <item name="numberPickerStyle">@style/Widget.NumberPicker</item>
         <item name="spinnerItemTextColor">@android:color/black</item>
         <item name="textViewTextColor">@android:color/white</item>
         <item name="editableTextViewTextColor">@android:color/black</item>
@@ -99,8 +96,7 @@
     </style>
 
     <style name="DialogBaseThemeLight" parent="android:Theme.Dialog">
-
-        <!-- item name="numberPickerStyle">@style/Widget.NumberPicker</item -->
+        <item name="numberPickerStyle">@style/Widget.NumberPicker</item>
         <item name="spinnerItemTextColor">@android:color/black</item>
         <item name="textViewTextColor">@android:color/white</item>
         <item name="editableTextViewTextColor">@android:color/black</item>
