--- a/res/layout/dialog_numberpicker.xml
+++ b/res/layout/dialog_numberpicker.xml
@@ -1,40 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:gravity="center_vertical"
-    android:orientation="vertical"
+    android:gravity="center"
     android:padding="@dimen/view_padding" >
 
-    <TextView
-        android:id="@+id/textViewTitle"
+    <com.anna.sent.soft.numberpickerlibrary.NumberPicker
+        android:id="@+id/numberPicker"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
+        android:orientation="vertical" />
+
+    <TextView
+        android:id="@+id/textViewUnit"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_toRightOf="@id/numberPicker"
+        android:paddingLeft="@dimen/view_padding"
         android:text=""
         android:textAppearance="?android:attr/textAppearanceSmall" />
 
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center" >
-
-        <com.anna.sent.soft.numberpickerlibrary.NumberPicker
-            android:id="@+id/numberPicker"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:focusable="true"
-            android:focusableInTouchMode="true"
-            android:orientation="vertical" />
-
-        <TextView
-            android:id="@+id/textViewUnit"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_toRightOf="@id/numberPicker"
-            android:text=""
-            android:textAppearance="?android:attr/textAppearanceSmall" />
-    </RelativeLayout>
-
-</LinearLayout>
+</RelativeLayout>
