--- a/res/layout/dialog_password.xml
+++ b/res/layout/dialog_password.xml
@@ -7,32 +7,35 @@
     android:padding="@dimen/view_padding" >
 
     <TextView
-        android:id="@+id/textViewOldPassword"
+        android:id="@+id/textViewEnterPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/enterOldPassword"
+        android:text="@string/enterPassword"
         android:textAppearance="?android:attr/textAppearanceSmall" />
 
-    <EditText
-        android:id="@+id/editTextOldPassword"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:inputType="textPassword" >
-    </EditText>
+        android:layout_height="wrap_content" >
 
-    <TextView
-        android:id="@+id/textViewNewPassword"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/enterNewPassword"
-        android:textAppearance="?android:attr/textAppearanceSmall" />
+        <EditText
+            android:id="@+id/editTextPassword"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_centerVertical="true"
+            android:layout_toLeftOf="@+id/buttonClearPassword"
+            android:inputType="textPassword" >
+        </EditText>
 
-    <EditText
-        android:id="@+id/editTextNewPassword"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:inputType="textPassword" >
-    </EditText>
+        <Button
+            android:id="@id/buttonClearPassword"
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:text="@android:string/ok" />
+    </RelativeLayout>
 
     <TextView
         android:id="@+id/textViewConfirmPassword"
@@ -41,11 +44,28 @@
         android:text="@string/confirmPassword"
         android:textAppearance="?android:attr/textAppearanceSmall" />
 
-    <EditText
-        android:id="@+id/editTextConfirmedPassword"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:inputType="textPassword" >
-    </EditText>
+        android:layout_height="wrap_content" >
+
+        <EditText
+            android:id="@+id/editTextConfirmedPassword"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_centerVertical="true"
+            android:layout_toLeftOf="@+id/buttonClearConfirmedPassword"
+            android:inputType="textPassword" >
+        </EditText>
+
+        <Button
+            android:id="@id/buttonClearConfirmedPassword"
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:text="@android:string/ok" />
+    </RelativeLayout>
 
 </LinearLayout>
