--- a/res/layout/dialog_password.xml
+++ b/res/layout/dialog_password.xml
@@ -25,6 +25,8 @@
             android:layout_centerVertical="true"
             android:layout_toLeftOf="@+id/buttonClearPassword"
             android:inputType="textPassword" >
+
+            <requestFocus />
         </EditText>
 
         <Button
@@ -34,7 +36,8 @@
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
-            android:text="@android:string/ok" />
+            android:drawableLeft="?attr/removeContentIcon"
+            android:text="" />
     </RelativeLayout>
 
     <TextView
@@ -65,7 +68,8 @@
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
-            android:text="@android:string/ok" />
+            android:drawableLeft="?attr/removeContentIcon"
+            android:text="" />
     </RelativeLayout>
 
 </LinearLayout>
