--- a/res/values/themes.xml
+++ b/res/values/themes.xml
@@ -3,6 +3,7 @@
 
     <declare-styleable name="Theme">
         <attr name="helpIcon" format="reference" />
+        <attr name="lockIcon" format="reference" />
         <attr name="settingsIcon" format="reference" />
         <attr name="rateIcon" format="reference" />
         <attr name="statisticIcon" format="reference" />
@@ -13,6 +14,7 @@
         <attr name="prevItemIcon" format="reference" />
         <attr name="goToTodayIcon" format="reference" />
         <attr name="listIcon" format="reference" />
+        <attr name="removeContentIcon" format="reference" />
         <attr name="note_bg" format="reference" />
         <attr name="sex_bg" format="reference" />
         <attr name="protected_sex_bg" format="reference" />
@@ -29,6 +31,7 @@
     <style name="AppBaseTheme" parent="android:Theme">
         <item name="numberPickerStyle">@style/Widget.NumberPicker</item>
         <item name="helpIcon">@drawable/ic_menu_help_light</item>
+        <item name="lockIcon">@drawable/ic_lock_light</item>
         <item name="settingsIcon">@drawable/ic_settings_light</item>
         <item name="rateIcon">@drawable/ic_menu_rate_light</item>
         <item name="statisticIcon">@drawable/ic_menu_statistic_light</item>
@@ -43,6 +46,7 @@
     <style name="AppBaseThemeLight" parent="android:Theme.Light">
         <item name="numberPickerStyle">@style/Widget.NumberPicker</item>
         <item name="helpIcon">@drawable/ic_menu_help_light</item>
+        <item name="lockIcon">@drawable/ic_lock_light</item>
         <item name="settingsIcon">@drawable/ic_settings_light</item>
         <item name="rateIcon">@drawable/ic_menu_rate_light</item>
         <item name="statisticIcon">@drawable/ic_menu_statistic_light</item>
@@ -59,6 +63,7 @@
         <item name="prevItemIcon">@drawable/ic_previous_item_dark</item>
         <item name="goToTodayIcon">@drawable/ic_go_to_today_dark</item>
         <item name="listIcon">@drawable/ic_list_dark</item>
+        <item name="removeContentIcon">@drawable/ic_remove_content_dark</item>
         <item name="note_bg">@drawable/bg_note_dark</item>
         <item name="sex_bg">@drawable/bg_sex_dark</item>
         <item name="protected_sex_bg">@drawable/bg_protected_sex_dark</item>
@@ -74,6 +79,7 @@
         <item name="prevItemIcon">@drawable/ic_previous_item_light</item>
         <item name="goToTodayIcon">@drawable/ic_go_to_today_light</item>
         <item name="listIcon">@drawable/ic_list_light</item>
+        <item name="removeContentIcon">@drawable/ic_remove_content_light</item>
         <item name="note_bg">@drawable/bg_note_light</item>
         <item name="sex_bg">@drawable/bg_sex_light</item>
         <item name="protected_sex_bg">@drawable/bg_protected_sex_light</item>
@@ -93,6 +99,7 @@
         <item name="prevItemIcon">@drawable/ic_previous_item_dark</item>
         <item name="goToTodayIcon">@drawable/ic_go_to_today_dark</item>
         <item name="listIcon">@drawable/ic_list_light</item>
+        <item name="removeContentIcon">@drawable/ic_remove_content_light</item>
     </style>
 
     <style name="DialogBaseThemeLight" parent="android:Theme.Dialog">
@@ -104,6 +111,7 @@
         <item name="prevItemIcon">@drawable/ic_previous_item_dark</item>
         <item name="goToTodayIcon">@drawable/ic_go_to_today_dark</item>
         <item name="listIcon">@drawable/ic_list_light</item>
+        <item name="removeContentIcon">@drawable/ic_remove_content_light</item>
     </style>
 
     <style name="DialogTheme" parent="DialogBaseTheme">
