--- a/res/layout/dialog_password.xml
+++ b/res/layout/dialog_password.xml
@@ -58,8 +58,7 @@
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
             android:layout_toLeftOf="@+id/buttonClearConfirmedPassword"
-            android:inputType="textPassword" >
-        </EditText>
+            android:inputType="textPassword" />
 
         <Button
             android:id="@id/buttonClearConfirmedPassword"
