--- a/res/layout/grid_cell_day_of_week.xml
+++ b/res/layout/grid_cell_day_of_week.xml
@@ -11,7 +11,6 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:gravity="center"
-        android:textIsSelectable="false" >
-    </TextView>
+        android:textIsSelectable="false" />
 
 </FrameLayout>
