--- a/res/values/help.xml
+++ b/res/values/help.xml
@@ -12,7 +12,7 @@
         <item>
 <![CDATA[
 <P>
-Пункт &laquo;Меню-Статистика&raquo; или кнопка на верхней панели приложения (начиная с версии Android 3.0).
+Пункт <B>&laquo;Меню-Статистика&raquo;</B> или кнопка на верхней панели приложения (начиная с версии Android 3.0).
 Смотрите примечание внизу таблицы.
 </P>
 ]]>
@@ -20,100 +20,100 @@
         <item>
 <![CDATA[
 <P>
-Пункты &laquo;Меню-Сохранить данные&raquo; (экспорт) и &laquo;Меню-Восстановить данные&raquo; (импорт).<BR/>
+Пункты <B>&laquo;Меню-Сохранить данные&raquo;</B> (экспорт) и <B>&laquo;Меню-Восстановить данные&raquo;</B> (импорт).<BR/><BR/>
 
-Файлы для экспорта-импорта хранятся в корне SD-карты, в каталоге WomanCyc.<BR/>
+Файлы для экспорта-импорта хранятся в корне SD-карты, в каталоге WomanCyc.<BR/><BR/>
 
-Вы можете задать имя файла или выбрать существующий файл из списка.<BR/>
+Вы можете задать имя файла или выбрать существующий файл из списка.<BR/><BR/>
 
-Настройки приложения (все, что в &laquo;Меню-Настройки&raquo;) в этот файл НЕ сохраняются.<BR/>
+Настройки приложения (все, что в <B>&laquo;Меню-Настройки&raquo;</B>) в этот файл НЕ сохраняются.<BR/><BR/>
 
-С помощью пункта &laquo;Меню-Сброс данных&raquo; можно осуществить сброс (очистку) всех данных (настройки при этом также НЕ сбрасываются).<BR/>
+С помощью пункта <B>&laquo;Меню-Сброс данных&raquo;</B> можно осуществить сброс (очистку) всех данных (настройки при этом также НЕ сбрасываются).<BR/><BR/>
 
-С помощью импорта-экспорта осуществляются:<BR/>
+С помощью импорта-экспорта осуществляются:<BR/><BR/>
 
-<I> * Перенос данных с одного устройства на другое.</I><BR/>
+<I> * Перенос данных с одного устройства на другое.</I><BR/><BR/>
 
 <I> * Хранение на устройстве данных нескольких пользователей.</I>
 Сохраняйте разные данные в файлы с разными именами и восстанавливайте для редактирования.
 (Не забывайте снова сохранить файл после редактирования.)
 Если есть необходимость в более удобном переключении пользователей, напишите пожелание по адресу
-<A HREF="mailto:anna.sent@gmail.com">anna.sent@gmail.com</A>.<BR/>
+<A HREF="mailto:anna.sent@gmail.com">anna.sent@gmail.com</A>.<BR/><BR/>
 
 <I> * Автоматизированная система бэкапов.</I>
 Делайте бэкапы данных на SD-карту устройства и переносите их на другие устройства, отправляйте по email, в Dropbox и т.&nbsp;п.
 Если есть необходимость в автоматической системе бэкапов, напишите пожелание по адресу
-<A HREF="mailto:anna.sent@gmail.com">anna.sent@gmail.com</A>.<BR/>
+<A HREF="mailto:anna.sent@gmail.com">anna.sent@gmail.com</A>.<BR/><BR/>
 
 <I> * Редактирование порций данных.</I>
 Данные 	сохраняются в читаемом формате в xml-файл,
-который Вы можете самостоятельно редактировать с помощью текстового редактора.<BR/>
+который Вы можете самостоятельно редактировать с помощью текстового редактора.<BR/><BR/>
 
-Формат файла:<BR/>
+Формат файла:<BR/><BR/>
 
-&lt;calendar&gt;<BR/>
+&lt;calendar&gt;<BR/><BR/>
 
-&lt;row _id=&quot;27-03-2013&quot; menstruation=&quot;no&quot; sex=&quot;no&quot; took_pill=&quot;no&quot; note=&quot;note1&quot; /&gt;<BR/>
+&lt;row _id=&quot;27-03-2013&quot; menstruation=&quot;no&quot; sex=&quot;no&quot; took_pill=&quot;no&quot; note=&quot;note1&quot; /&gt;<BR/><BR/>
 
-&lt;row _id=&quot;28-03-2013&quot; menstruation=&quot;yes&quot; sex=&quot;no&quot; took_pill=&quot;no&quot; note=&quot;note2&quot; /&gt;<BR/>
+&lt;row _id=&quot;28-03-2013&quot; menstruation=&quot;yes&quot; sex=&quot;no&quot; took_pill=&quot;no&quot; note=&quot;note2&quot; /&gt;<BR/><BR/>
 
-&lt;row _id=&quot;13-06-2013&quot; menstruation=&quot;three_drops&quot; sex=&quot;yes&quot; took_pill=&quot;yes&quot; note=&quot;note1&quot; /&gt;<BR/>
+&lt;row _id=&quot;13-06-2013&quot; menstruation=&quot;three_drops&quot; sex=&quot;yes&quot; took_pill=&quot;yes&quot; note=&quot;note1&quot; /&gt;<BR/><BR/>
 
-&lt;row _id=&quot;18-06-2013&quot; menstruation=&quot;two_drops&quot; sex=&quot;unprotected&quot; took_pill=&quot;no&quot; note=&quot;&quot; /&gt;<BR/>
+&lt;row _id=&quot;18-06-2013&quot; menstruation=&quot;two_drops&quot; sex=&quot;unprotected&quot; took_pill=&quot;no&quot; note=&quot;&quot; /&gt;<BR/><BR/>
 
-&lt;row _id=&quot;19-06-2013&quot; menstruation=&quot;one_drop&quot; sex=&quot;protected&quot; took_pill=&quot;no&quot; note=&quot;&quot; /&gt;<BR/>
+&lt;row _id=&quot;19-06-2013&quot; menstruation=&quot;one_drop&quot; sex=&quot;protected&quot; took_pill=&quot;no&quot; note=&quot;&quot; /&gt;<BR/><BR/>
 
-&hellip;<BR/>
+&hellip;<BR/><BR/>
 
-&lt;/calendar&gt;<BR/>
+&lt;/calendar&gt;<BR/><BR/>
 
 Порядок записей по датам и порядок перечисления атрибутов записи не имеет значения.
-Пробелы и символы табуляции не имеют значения. Атрибуты записи могут отсутствовать.<BR/>
+Пробелы и символы табуляции не имеют значения. Атрибуты записи могут отсутствовать.<BR/><BR/>
 </P>
 ]]>
         </item>
         <item>
 <![CDATA[
 Если вы не хотите, чтобы ваши личные данные случайно увидел кто-нибудь, имеющий доступ к вашему устройству,
-установите пароль в &laquo;Меню-Настройки-Пароль&raquo;.<BR/>
+установите пароль в <B>&laquo;Меню-Настройки-Пароль&raquo;</B>.<BR/><BR/>
 
 Пароль можно отправить на свой email для восстановления в случае, если вы его забудете.
-При выборе пункта &laquo;Меню-Настройки-Отправить пароль по email&raquo; откроется почтовый клиент, установленный на устройстве.
+При выборе пункта <B>&laquo;Меню-Настройки-Отправить пароль по email&raquo;</B> откроется почтовый клиент, установленный на устройстве.
 В поле &laquo;Кому&raquo; будет внесен адрес эл. почты владельца устройства
-(на некоторых устройствах это поле может оставаться незаполненным, в этом случае наберите адрес).<BR/>
+(на некоторых устройствах это поле может оставаться незаполненным, в этом случае наберите адрес).<BR/><BR/>
 
 Будьте внимательны: чтобы сбросить забытый пароль, необходимо переустановить приложение или очистить данные приложения
-(Настройки вашего устройства-Приложения-WomanCyc-Очистить данные). При этом все внесенные вами данные будут потеряны.<BR/>
+(Настройки вашего устройства-Приложения-WomanCyc-Очистить данные). При этом все внесенные вами данные будут потеряны.<BR/><BR/>
 
 Если вы забыли пароль и не хотите терять все внесенные данные, напишите разработчику
-<A HREF="mailto:anna.sent@gmail.com">anna.sent@gmail.com</A>.<BR/>
+<A HREF="mailto:anna.sent@gmail.com">anna.sent@gmail.com</A>.<BR/><BR/>
 
-При установке пароля появится пункт &laquo;Меню-Блокировка и выход&raquo;.
-Если выйти из приложения с помощью этого пункта, то при следующем запуске приложения будет запрошен ввод пароля.<BR/>
+При установке пароля появится пункт <B>&laquo;Меню-Блокировка и выход&raquo;</B>.
+Если выйти из приложения с помощью этого пункта, то при следующем запуске приложения будет запрошен ввод пароля.<BR/><BR/>
 
-Можно установить пункт &laquo;Меню-Настройки-Автоматическая блокировка&raquo;.
-В этом случае пароль будет запрашиваться каждый раз при выходе из приложения.<BR/>
+Можно установить пункт <B>&laquo;Меню-Настройки-Автоматическая блокировка&raquo;</B>.
+В этом случае пароль будет запрашиваться каждый раз при выходе из приложения.<BR/><BR/>
 
-Кроме того, вы можете задать с помощью пункта &laquo;Меню-Настройки-Скрывать виджет&raquo;, скрывать ли виджет при заблокированном приложении.<BR/>
+Кроме того, вы можете задать с помощью пункта <B>&laquo;Меню-Настройки-Скрывать виджет&raquo;</B>, скрывать ли виджет при заблокированном приложении.<BR/><BR/>
 </P>
 ]]>
         </item>
         <item>
 <![CDATA[
 <P>
-Доступны две конфигурации виджета:<BR/>
+Доступны две конфигурации виджета:<BR/><BR/>
 
- * &lt;день цикла&gt;<BR/>
+ * &lt;день цикла&gt;<BR/><BR/>
  
- * &lt;день цикла&gt; (&lt;продолжительность цикла&gt;)<BR/>
+ * &lt;день цикла&gt; (&lt;продолжительность цикла&gt;)<BR/><BR/>
 
 В качестве продолжительности цикла берется заданное или рассчитанное (среднее) значение
-(смотрите пункты &laquo;Меню-Настройки-Менструальный цикл&raquo; и &laquo;Меню-Настройки-На основе текущих данных&raquo;).<BR/>
+(смотрите пункты <B>&laquo;Меню-Настройки-Менструальный цикл&raquo;</B> и <B>&laquo;Меню-Настройки-На основе текущих данных&raquo;</B>).<BR/><BR/>
 
-При нажатии на виджет запускается приложение.<BR/>
+При нажатии на виджет запускается приложение.<BR/><BR/>
 
 С помощью виджета вы можете определить задержку: например, &laquo;30 (28)&raquo; &mdash;
-сегодня 30-й день цикла при заданной или средней продолжительности цикла 28 дней.<BR/>
+сегодня 30-й день цикла при заданной или средней продолжительности цикла 28 дней.<BR/><BR/>
 </P>
 ]]>
         </item>
@@ -121,18 +121,18 @@
 <![CDATA[
 <P>
 Если есть необходимость в каких-либо из следующих функций (или в каких-то других), напишите пожелание по адресу
-<A HREF="mailto:anna.sent@gmail.com">anna.sent@gmail.com</A> (пункт &laquo;Меню-Настройки-Написать разработчику&raquo;):<BR/>
+<A HREF="mailto:anna.sent@gmail.com">anna.sent@gmail.com</A> (пункт <B>&laquo;Меню-Настройки-Написать разработчику&raquo;</B>):<BR/><BR/>
 
  * Гибкая настройка пользовательского интерфейса:
-отображение и скрытие неиспользуемых пунктов меню, скрытие подписей &mdash; для устройств с небольшими экранами.<BR/>
+отображение и скрытие неиспользуемых пунктов меню, скрытие подписей &mdash; для устройств с небольшими экранами.<BR/><BR/>
 
- * Задание времени напоминания принятия таблетки, задание других уведомлений.<BR/>
+ * Задание времени напоминания принятия таблетки, задание других уведомлений.<BR/><BR/>
 
- * Редактирование порций данных с помощью приложения.<BR/>
+ * Редактирование порций данных с помощью приложения.<BR/><BR/>
 
- * Резервное копирование по расписанию, отправка копий в Dropbox, email.<BR/>
+ * Резервное копирование по расписанию, отправка копий в Dropbox, email.<BR/><BR/>
 
- * Многопользовательский режим.<BR/>
+ * Многопользовательский режим.<BR/><BR/>
 </P>
 ]]>
         </item>
