--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -36,5 +36,10 @@
         android:icon="?attr/lockIcon"
         android:showAsAction="never"
         android:title="@string/lockAndExit"/>
+    <item
+        android:id="@+id/test25"
+        android:showAsAction="never"
+        android:title="@string/test25"
+        android:visible="@bool/test"/>
 
 </menu>
