--- a/res/layout/view_day.xml
+++ b/res/layout/view_day.xml
@@ -152,6 +152,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:gravity="center"
             android:orientation="horizontal"
             android:paddingTop="@dimen/view_padding" >
 
