--- a/res/values/help.xml
+++ b/res/values/help.xml
@@ -2,21 +2,12 @@
 <resources>
 
     <string-array name="helpTitles">
-        <item>Статистика</item>
         <item>Экспорт и импорт</item>
         <item>Пароль</item>
         <item>Виджет</item>
         <item>Дополнительные функции</item>
     </string-array>
     <string-array name="helpParts">
-        <item>
-<![CDATA[
-<P>
-Пункт <B>&laquo;Меню-Статистика&raquo;</B> или кнопка на верхней панели приложения (начиная с версии Android 3.0).
-Смотрите примечание внизу таблицы.
-</P>
-]]>
-        </item>
         <item>
 <![CDATA[
 <P>
@@ -83,10 +74,8 @@
 (на некоторых устройствах это поле может оставаться незаполненным, в этом случае наберите адрес).<BR/><BR/>
 
 Будьте внимательны: чтобы сбросить забытый пароль, необходимо переустановить приложение или очистить данные приложения
-(Настройки вашего устройства-Приложения-WomanCyc-Очистить данные). При этом все внесенные вами данные будут потеряны.<BR/><BR/>
-
-Если вы забыли пароль и не хотите терять все внесенные данные, напишите разработчику
-<A HREF="mailto:anna.sent@gmail.com">anna.sent@gmail.com</A>.<BR/><BR/>
+(Настройки вашего устройства-Приложения-WomanCyc-Очистить данные).
+При этом все внесенные вами данные, кроме сохраненных (экспортированных) файлов, будут потеряны.<BR/><BR/>
 
 При установке пароля появится пункт <B>&laquo;Меню-Блокировка и выход&raquo;</B>.
 Если выйти из приложения с помощью этого пункта, то при следующем запуске приложения будет запрошен ввод пароля.<BR/><BR/>
@@ -113,7 +102,7 @@
 При нажатии на виджет запускается приложение.<BR/><BR/>
 
 С помощью виджета вы можете определить задержку: например, &laquo;30 (28)&raquo; &mdash;
-сегодня 30-й день цикла при заданной или средней продолжительности цикла 28 дней.<BR/><BR/>
+сегодня 30-й день цикла при заданной или средней продолжительности цикла 28 дней (2 дня задержки).<BR/><BR/>
 </P>
 ]]>
         </item>
