huck dialog theme

--- a/res/layout/dialog_password.xml
+++ b/res/layout/dialog_password.xml
@@ -36,7 +36,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
-            android:drawableLeft="?attr/removeContentIcon"
+            android:drawableLeft="?attr/dialog_removeContentIcon"
             android:text="" />
     </RelativeLayout>
 
@@ -67,7 +67,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
-            android:drawableLeft="?attr/removeContentIcon"
+            android:drawableLeft="?attr/dialog_removeContentIcon"
             android:text="" />
     </RelativeLayout>
 
