--- a/res/values-v11/themes.xml
+++ b/res/values-v11/themes.xml
@@ -15,6 +15,14 @@
         <item name="textViewTextColor">@android:color/white</item>
         <item name="editableTextViewTextColor">@android:color/white</item>
         <item name="android:windowActionBar">true</item>
+        <item name="dialog_spinnerItemTextColor">@android:color/white</item>
+        <item name="dialog_textViewTextColor">@android:color/white</item>
+        <item name="dialog_editableTextViewTextColor">@android:color/white</item>
+        <item name="dialog_nextItemIcon">@drawable/ic_next_item_dark</item>
+        <item name="dialog_prevItemIcon">@drawable/ic_previous_item_dark</item>
+        <item name="dialog_goToTodayIcon">@drawable/ic_go_to_today_dark</item>
+        <item name="dialog_listIcon">@drawable/ic_list_dark</item>
+        <item name="dialog_removeContentIcon">@drawable/ic_remove_content_dark</item>
     </style>
 
     <style name="AppBaseThemeLight" parent="android:Theme.Holo.Light">
@@ -31,30 +39,14 @@
         <item name="textViewTextColor">@android:color/black</item>
         <item name="editableTextViewTextColor">@android:color/black</item>
         <item name="android:windowActionBar">true</item>
-    </style>
-
-    <style name="DialogBaseTheme" parent="android:Theme.Holo.Dialog">
-        <item name="numberPickerStyle">@style/Widget.Holo.NumberPicker</item>
-        <item name="spinnerItemTextColor">@android:color/white</item>
-        <item name="textViewTextColor">@android:color/white</item>
-        <item name="editableTextViewTextColor">@android:color/white</item>
-        <item name="nextItemIcon">@drawable/ic_next_item_dark</item>
-        <item name="prevItemIcon">@drawable/ic_previous_item_dark</item>
-        <item name="goToTodayIcon">@drawable/ic_go_to_today_dark</item>
-        <item name="listIcon">@drawable/ic_list_dark</item>
-        <item name="removeContentIcon">@drawable/ic_remove_content_dark</item>
-    </style>
-
-    <style name="DialogBaseThemeLight" parent="android:Theme.Holo.Light.Dialog">
-        <item name="numberPickerStyle">@style/Widget.Holo.Light.NumberPicker</item>
-        <item name="spinnerItemTextColor">@android:color/black</item>
-        <item name="textViewTextColor">@android:color/black</item>
-        <item name="editableTextViewTextColor">@android:color/black</item>
-        <item name="nextItemIcon">@drawable/ic_next_item_light</item>
-        <item name="prevItemIcon">@drawable/ic_previous_item_light</item>
-        <item name="goToTodayIcon">@drawable/ic_go_to_today_light</item>
-        <item name="listIcon">@drawable/ic_list_light</item>
-        <item name="removeContentIcon">@drawable/ic_remove_content_light</item>
+        <item name="dialog_spinnerItemTextColor">@android:color/black</item>
+        <item name="dialog_textViewTextColor">@android:color/black</item>
+        <item name="dialog_editableTextViewTextColor">@android:color/black</item>
+        <item name="dialog_nextItemIcon">@drawable/ic_next_item_light</item>
+        <item name="dialog_prevItemIcon">@drawable/ic_previous_item_light</item>
+        <item name="dialog_goToTodayIcon">@drawable/ic_go_to_today_light</item>
+        <item name="dialog_listIcon">@drawable/ic_list_light</item>
+        <item name="dialog_removeContentIcon">@drawable/ic_remove_content_light</item>
     </style>
 
 </resources>
