--- a/res/values/help.xml
+++ b/res/values/help.xml
@@ -115,7 +115,7 @@
  * Гибкая настройка пользовательского интерфейса:
 отображение и скрытие неиспользуемых пунктов меню, скрытие подписей &mdash; для устройств с небольшими экранами.<BR/><BR/>
 
- * Задание времени напоминания принятия таблетки, задание других уведомлений.<BR/><BR/>
+ * Задание времени напоминания принятия таблетки, задание других уведомлений (о предполагаемом начале менструации и др.).<BR/><BR/>
 
  * Редактирование порций данных с помощью приложения.<BR/><BR/>
 
